Added fully async borrow